@startuml

title __W1761086-PREMIERLEAGUE's Class Diagram__\n

  namespace  {
    class Date {
    }
  }
  

  namespace  {
    class DateComparator {
    }
  }
  

  namespace  {
    class FootballClub {
    }
  }
  

  namespace  {
    class GUI {
    }
  }
  

  namespace  {
    interface LeagueManager {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Match {
    }
  }
  

  namespace  {
    class PremierLeagueManager {
    }
  }
  

  namespace  {
    class SchoolFootballClub {
    }
  }
  

  namespace  {
    class Score {
    }
  }
  

  namespace  {
    abstract class SportsClub {
    }
  }
  

  namespace  {
    class TeamComparator {
    }
  }
  

  namespace  {
    class UniversityFootballClub {
    }
  }
  

  Date .up.|> java.io.Serializable
  DateComparator .up.|> java.util.Comparator
  FootballClub .up.|> java.io.Serializable
  FootballClub -up-|> SportsClub
  Main -up-|> javafx.application.Application
  Match .up.|> java.io.Serializable
  Match o-- FootballClub : awayTeam
  Match o-- Date : date
  Match o-- FootballClub : homeTeam
  PremierLeagueManager .up.|> LeagueManager
  PremierLeagueManager -up-|> Score
  SchoolFootballClub -up-|> FootballClub
  SportsClub .up.|> java.io.Serializable
  TeamComparator .up.|> java.util.Comparator
  UniversityFootballClub -up-|> FootballClub


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
